fixed z-index in modal windows

--- a/src/styles/DialogModal.css
+++ b/src/styles/DialogModal.css
@@ -21,6 +21,7 @@
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
 
 .modal::backdrop {
